@@ -140,7 +140,7 @@ Incorporate checkstyle.
 	net.grinder.script
 	net.grinder.statistics
 
-Try findbugs.
+Occasionaly use findbugs.
 
 * Documentation
 
